--- a/src/pages/data/profile/index.astro
+++ b/src/pages/data/profile/index.astro
@@ -1,7 +1,7 @@
 ---
 export const prerender = false;
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
 import ProfilePanel from "@/components/profile/panel/ProfilePanel";
 import BackButton from "@/components/custom-ui/BackButton";
@@ -46,7 +46,7 @@ export const highBalance = {
 } satisfies FinanceInfoProps;
 ---
 
-<V2Layout hideLinks={[ItemName.ProjectName]} subtitle="Data Section: Profile">
+<V2Layout hideLinks={[MenuName.ProjectName]} subtitle="Data Section: Profile">
   <BackButton href="/maintainer/work" slot="left" />
   <ProfilePanel {...highRatedProfile} slot="center" client:only />
   {highRatedProfile.selfProfile && <FinanceInfo {...highBalance} />}
