--- a/src/pages/data/project/index.astro
+++ b/src/pages/data/project/index.astro
@@ -1,6 +1,6 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
 import NotificationBanner from "@/components/NotificationBanner";
 import ProjectInfo from "@/components/project/ProjectLink";
@@ -13,7 +13,7 @@ import MenuPanel from "@/components/menu/MenuPanel";
 import IssueInfoPanel from "@/components/project/IssueStatPanel";
 ---
 
-<V2Layout active={ItemName.ProjectName} subtitle="Data Section: Project">
+<V2Layout active={MenuName.ProjectName} subtitle="Data Section: Project">
   <MenuPanel slot="left" activeMenuItem="project" />
   <NotificationBanner
     type="success"
