--- a/src/pages/data/project/post.astro
+++ b/src/pages/data/project/post.astro
@@ -1,6 +1,6 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
 import ProjectPostFlow from "@/components/project/ProjectPostingStepper";
 import NotificationBanner from "@/components/NotificationBanner";
@@ -16,7 +16,7 @@ const createdIssueId =
         Astro.url.searchParams.get("createdIssueId") || undefined;
 ---
 
-<V2Layout hideLinks={[ItemName.ProjectName]}>
+<V2Layout hideLinks={[MenuName.ProjectName]}>
         <NotificationBanner
                 slot="center"
                 icon="project"
