--- a/src/pages/maintainer/balance.astro
+++ b/src/pages/maintainer/balance.astro
@@ -1,13 +1,13 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import MenuPanel from "@/components/menu/MenuPanel";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/navbar/WorkNavbar.astro";
 
+import MenuPanel from "@/components/menu/MenuPanel";
 import BalanceCard from "@/components/maintainer/BalancePanel";
 import TransactionsCard from "@/components/maintainer/RecentTransactionPanel";
 ---
 
-<V2Layout active={ItemName.ProjectName}>
+<V2Layout active={MenuName.ProjectName}>
       <MenuPanel activeMenuItem="balance" slot="left" />
       <BalanceCard slot="center" />
       <TransactionsCard slot="center" />
