--- a/src/pages/maintainer/cbalance.astro
+++ b/src/pages/maintainer/cbalance.astro
@@ -1,13 +1,13 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/menu/MenuPanel";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
 import CascadingBalance from "@/components/maintainer/CascadingBalancePanel";
 import TransactionHistory from "@/components/maintainer/RecentTransactionPanel";
 ---
 
-<V2Layout activeLink={ItemName.ProjectName}>
+<V2Layout activeLink={MenuName.ProjectName}>
   <Menu activeMenuItem="cbalance" slot="left" />
   <CascadingBalance slot="center" />
   <TransactionHistory slot="center" />
