--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -1,6 +1,6 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 import Menu from "@/components/menu/MenuPanel";
 
 import TaskSection from "@/components/quest/QuestPanel";
@@ -9,7 +9,7 @@ import PageLikePanel from "@/components/panel/PageLikePanel";
 import CworkPanel from "@/components/maintainer/CworkPanel";
 ---
 
-<V2Layout active={ItemName.ProjectName}>
+<V2Layout active={MenuName.ProjectName}>
   <Menu slot="left" activeMenuItem="cwork" client:load />
   <NotificationBanner
     slot="center"
