--- a/src/pages/maintainer/marketing.astro
+++ b/src/pages/maintainer/marketing.astro
@@ -1,7 +1,7 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/menu/MenuPanel";
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 import PageLikePanel from "@/components/panel/PageLikePanel";
 
 import ShareTools from "@/components/maintainer/ShareToolsPanel";
@@ -13,7 +13,7 @@ import CallToAction from "@/components/maintainer/MarketingActionsPanel";
 import InsightPanel from "@/components/maintainer/InsightPanel";
 ---
 
-<V2Layout activeLink={ItemName.ProjectName}>
+<V2Layout activeLink={MenuName.ProjectName}>
   <Menu slot="left" activeMenuItem="marketing" />
   <PageLikePanel
     slot="center"
