--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -3,7 +3,7 @@ import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/menu/MenuPanel";
 import Link from "@/components/custom-ui/Link";
 
-import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
 import InfoPanel from "@/components/panel/InfoPanel";
 import TasksSection from "@/components/quest/QuestPanel";
@@ -11,7 +11,7 @@ import RoadmapPanel from "@/components/maintainer/RoadmapPanel";
 import WorkPanel from "@/components/maintainer/WorkPanel";
 ---
 
-<V2Layout active={ItemName.ProjectName}>
+<V2Layout active={MenuName.ProjectName}>
   <Menu activeMenuItem="work" slot="left" />
   <!-- <TasksSection slot="center" client:load /> -->
   <!-- <InfoPanel
