--- a/src/components/utilitified_decorations/Header.astro
+++ b/src/components/utilitified_decorations/Header.astro
@@ -1,7 +1,7 @@
 ---
 import CascadeFundLogo from "./Logo.astro";
 import AuthNavItem from "./AuthNavItem";
-import WorkNavbar, { type ItemName } from "./WorkNavbar.astro";
+import WorkNavbar, { type MenuName } from "./WorkNavbar.astro";
 
 interface Props {
   active?: string;
@@ -36,8 +36,8 @@ const { subtitle, active, hideLinks } = Astro.props;
         <WorkNavbar
           tabIndex="-1"
           className="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
-          active={active ? (active as ItemName) : undefined}
-          hideLinks={hideLinks ? (hideLinks as ItemName[]) : undefined}
+          active={active ? (active as MenuName) : undefined}
+          hideLinks={hideLinks ? (hideLinks as MenuName[]) : undefined}
           vertical={true}
           ><slot />
         </WorkNavbar>
@@ -47,8 +47,8 @@ const { subtitle, active, hideLinks } = Astro.props;
     <div class="navbar-center h-6 hidden lg:flex lg:min-w-[50vw]">
       <WorkNavbar
         className="space-x-6"
-        active={active ? (active as ItemName) : undefined}
-        hideLinks={hideLinks ? (hideLinks as ItemName[]) : undefined}
+        active={active ? (active as MenuName) : undefined}
+        hideLinks={hideLinks ? (hideLinks as MenuName[]) : undefined}
         ><slot />
       </WorkNavbar>
     </div>
