--- a/src/pages/maintainer/cbalance.astro
+++ b/src/pages/maintainer/cbalance.astro
@@ -1,14 +1,14 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/menu/MenuPanel";
-import { MenuName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import { MenuName } from "@/components/navbar/WorkNavbar.astro";
 
 import CascadingBalance from "@/components/maintainer/CascadingBalancePanel";
-import TransactionHistory from "@/components/maintainer/RecentTransactionPanel";
+// import TransactionHistory from "@/components/maintainer/RecentTransactionPanel";
 ---
 
-<V2Layout activeLink={MenuName.ProjectName}>
+<V2Layout active={MenuName.ProjectName}>
   <Menu activeMenuItem="cbalance" slot="left" />
   <CascadingBalance slot="center" />
-  <TransactionHistory slot="center" />
+  <!-- <TransactionHistory slot="center" /> -->
 </V2Layout>
