Improve the maintainer's marketing page

--- a/src/pages/maintainer/marketing.astro
+++ b/src/pages/maintainer/marketing.astro
@@ -6,31 +6,30 @@ import PageLikePanel from "@/components/panel/PageLikePanel";
 
 import ShareTools from "@/components/maintainer/ShareToolsPanel";
 
-import MarketingAnalyticsPanel from "@/components/maintainer/MarketingTabs";
+// import MarketingTabs from "@/components/maintainer/MarketingTabs";
 import RowGrid from "@/components/grid/RowGrid";
-import CommentFeedback from "@/components/maintainer/CommentFeedbackPanel";
-import CallToAction from "@/components/maintainer/MarketingActionsPanel";
-import InsightPanel from "@/components/maintainer/InsightPanel";
+// import CommentFeedback from "@/components/maintainer/CommentFeedbackPanel";
+// import CallToAction from "@/components/maintainer/MarketingActionsPanel";
+// import InsightPanel from "@/components/maintainer/InsightPanel";
+import InfoPanel from "@/components/panel/InfoPanel";
 ---
 
 <Layout active={MenuName.ProjectName}>
   <MenuPanel activeMenuItem="marketing" slot="left" />
-  <PageLikePanel
+  <InfoPanel
     slot="center"
     title="CascadeFund Marketing Tools"
     actions={[{ variant: "success", children: "Start Tour", uri: "#" }]}
   >
-    <p class="text-gray-600">
-      This page is all about helping your project grow. Whether you want more
-      users, donations, or contributors, CascadeFund gives you simple share
-      tools to spread the word and onboard people.
-    </p>
-  </PageLikePanel>
-  <MarketingAnalyticsPanel slot="center" client:load />
-  <RowGrid slot="center" cols={2}>
-    <CommentFeedback />
-    <CallToAction />
-  </RowGrid>
-  <ShareTools slot="right" />
-  <InsightPanel slot="right" />
+    This page is all about helping your project grow. Whether you want more
+    users, donations, or contributors, CascadeFund gives you simple share tools
+    to spread the word and onboard people.
+  </InfoPanel>
+  <!-- <MarketingTabs slot="center" client:load /> -->
+  <!-- <RowGrid slot="center" cols={2}> -->
+  <!-- <CommentFeedback /> -->
+  <!-- <CallToAction /> -->
+  <!-- </RowGrid> -->
+  <ShareTools slot="center" />
+  <!-- <InsightPanel slot="right" /> -->
 </Layout>
