--- a/src/layouts/PanelViewLayout.astro
+++ b/src/layouts/PanelViewLayout.astro
@@ -6,13 +6,15 @@ import Header from "@/components/utilitified_decorations/Header.astro";
 import Footer from "@/components/utilitified_decorations/Footer.astro";
 import ThreeColumnGrid from "@/components/grid/ThreeColumnGrid.astro";
 import GridBackgrounded from "./GridBackgrounded";
+import { MenuItemProps } from "@/components/menu/MenuItem";
 
 interface Props {
   subtitle?: string;
   active?: string;
   hideLinks?: string[];
+  additional?: MenuItemProps[];
 }
-const { subtitle, hideLinks } = Astro.props;
+const { subtitle, hideLinks, additional } = Astro.props;
 ---
 
 <!doctype html>
@@ -31,7 +33,7 @@ const { subtitle, hideLinks } = Astro.props;
   <body class="min-h-screen bg-gray-200">
     <GridBackgrounded />
     <div class="z-1 relative">
-      <Header subtitle={subtitle} hideLinks={hideLinks}>
+      <Header subtitle={subtitle} hideLinks={hideLinks} additional={additional}>
         <slot name="header-navbar" />
       </Header>
       <section class="mt-6">
