--- a/src/pages/maintainer/marketing.astro
+++ b/src/pages/maintainer/marketing.astro
@@ -2,12 +2,11 @@
 import Layout from "@/layouts/PanelViewLayout.astro";
 import MenuPanel from "@/components/menu/MenuPanel";
 import { MenuName } from "@/components/navbar/WorkNavbar.astro";
-import PageLikePanel from "@/components/panel/PageLikePanel";
 
 import ShareTools from "@/components/maintainer/ShareToolsPanel";
 
 // import MarketingTabs from "@/components/maintainer/MarketingTabs";
-import RowGrid from "@/components/grid/RowGrid";
+// import RowGrid from "@/components/grid/RowGrid";
 // import CommentFeedback from "@/components/maintainer/CommentFeedbackPanel";
 // import CallToAction from "@/components/maintainer/MarketingActionsPanel";
 // import InsightPanel from "@/components/maintainer/InsightPanel";
