--- a/src/pages/data/issue/post.astro
+++ b/src/pages/data/issue/post.astro
@@ -1,9 +1,7 @@
 ---
-import V2Layout from "@/layouts/PanelViewLayout.astro";
-import NavigatingSubtitledElement from "@/components/utilitified_decorations/NavigatingSubtitledItem";
-import NavigatingElement from "@/components/utilitified_decorations/NavigatingItem";
+import Layout from "@/layouts/PanelViewLayout.astro";
 import BackButton from "@/components/custom-ui/BackButton";
-
+import { MenuItemProps } from "@/components/menu/MenuItem";
 import IssueCard from "@/components/issue/UpdatableIssueContentPanel";
 import VotingSection from "@/components/issue/IssuePrioritificationPanel.astro";
 import ChatPanel from "@/components/chat";
@@ -11,18 +9,25 @@ import IssueDetails from "@/components/issue/UpdatableIssueDetailsPanel";
 
 import NotificationBanner from "@/components/NotificationBanner";
 
-const additional = [
-  await NavigatingElement({
+const additional: MenuItemProps[] = [
+  {
+    icon: "cascading-work",
+    label: "Cascading Work",
     href: "/maintainer/work",
-    children: "Cascading Work",
-  }),
-  await NavigatingSubtitledElement({
-    subtitle: "Issues List/Roadmap",
+  },
+  {
+    icon: "issue",
+    label: "Issues List/Roadmap",
+    href: "/data/project",
     active: true,
-    children: "Version",
-  }),
-  await NavigatingElement({ active: true, children: "Adding Issue" }),
-].reverse();
+  },
+  {
+    icon: "issue",
+    label: "Issue",
+    href: "/data/issue",
+    active: true,
+  },
+];
 
 // Project ID + Not Yet Created + Fork Project means issue is created for the
 // original project forked by project ID.
@@ -37,7 +42,7 @@ const backHref = isForOriginal
   : "/data/issue";
 ---
 
-<V2Layout>
+<Layout>
   <BackButton slot="left" href={backHref} />
   <NotificationBanner
     slot="center"
@@ -56,7 +61,7 @@ const backHref = isForOriginal
     panelTitle="Add a new Issue"
     actions={[
       {
-        variant: "blue",
+        variant: "primary",
         children: "Next",
         uri: "/data/issue",
       },
@@ -65,7 +70,7 @@ const backHref = isForOriginal
   <VotingSection slot="center" />
   <IssueDetails slot="right" />
   <ChatPanel slot="right" client:load />
-</V2Layout>
+</Layout>
 
 <style is:global>
   @import "@chatscope/chat-ui-kit-styles/dist/default/styles.min.css";
