--- a/src/pages/data/issue/post.astro
+++ b/src/pages/data/issue/post.astro
@@ -13,18 +13,18 @@ const additional: MenuItemProps[] = [
   {
     icon: "cascading-work",
     label: "Cascading Work",
-    href: "/maintainer/work",
+    uri: "/maintainer/work",
   },
   {
     icon: "issue",
     label: "Issues List/Roadmap",
-    href: "/data/project",
+    uri: "/data/project",
     active: true,
   },
   {
     icon: "issue",
     label: "Issue",
-    href: "/data/issue",
+    uri: "/data/issue",
     active: true,
   },
 ];
