Improve some minor errors to load TokenInput

--- a/src/pages/data/issue/index.astro
+++ b/src/pages/data/issue/index.astro
@@ -54,6 +54,7 @@ const additional: MenuItemProps[] = [
     currentVP={0}
     topVP={0}
     minVP={0}
+    client:load
   />
-  <IssueStatsPanel slot="right" />
+  <IssueStatsPanel slot="right" client:load />
 </Layout>
