--- a/src/pages/data/profile/index.astro
+++ b/src/pages/data/profile/index.astro
@@ -37,12 +37,12 @@ export const highRatedProfile: ProfileProps = {
   children: "",
 };
 
-export const highBalance = {
+export const highBalance: FinanceInfoProps = {
   balance: 15000,
   cascadingBalance: 25000,
   totalDonated: 35000,
   totalReceived: 28000,
-} satisfies FinanceInfoProps;
+};
 ---
 
 <V2Layout hideLinks={[MenuName.ProjectName]} subtitle="Data Section: Profile">
