--- a/src/pages/data/projects/index.astro
+++ b/src/pages/data/projects/index.astro
@@ -4,11 +4,16 @@ import { MenuName } from "@/components/navbar/WorkNavbar.astro";
 
 import ProjectsSection from "@/components/project/ProjectListPanel";
 import BackButton from "@/components/custom-ui/BackButton";
+import { ProjectInfoProps } from "@/components/project/ProjectLink";
 
-const projectData = {
+const projectData: ProjectInfoProps = {
+  uri: "/data/project",
   title: "Hyperpayment",
   isInfluencer: true,
-  rating: 4.8,
+  rating: {
+    rating: 4.8,
+    pointsLeft: 200,
+  },
   forks: 1,
   likes: 23,
   isFollowing: true,
@@ -17,12 +22,12 @@ const projectData = {
   description:
     "A protocol and it's implementation to transfer a resource between arbitrary amount parties. Used for example in the CascadeFund to distribute donations",
   license: "MIT License",
-  balance: "$1,240.00",
-  cascadeBalance: "$350.00",
-  totalAmount: "$45.00 Total",
+  balance: 1240,
+  cascadeBalance: 350,
+  totalAmount: 45,
   duration: "38 days",
-  lastActivity: "1 day ago",
-  totalCommits: "2,000",
+  lastActivity: 1,
+  totalCommits: 2000,
   commitsPerDay: "8 commits / day",
   openIssues: 12,
   closedIssues: 45,
@@ -32,17 +37,26 @@ const projectData = {
     { name: "Repeat Contributors", percentage: 25, color: "bg-blue-400" },
     { name: "One-time Contributors", percentage: 10, color: "bg-gray-400" },
   ],
-  activeYears: 8,
-  maintainer: {
-    name: "Jhansson",
-    rating: "220 rating",
+  author: {
+    uri: "/profile/alexjohnson",
+    children: "Alex Johnson",
+    rating: {
+      ratingType: "maintainer",
+      lvl: 220,
+      maxLvl: 10,
+      top: 10,
+    },
   },
   influencers: [
-    { avatar: "https://dummyimage.com/32x32/4A90E2/ffffff?text=A" },
-    { avatar: "https://dummyimage.com/32x32/4A90E2/ffffff?text=B" },
-    { avatar: "https://dummyimage.com/32x32/4A90E2/ffffff?text=C" },
-    { avatar: "https://dummyimage.com/32x32/4A90E2/ffffff?text=D" },
+    { uri: "/profile/alexjohnson", children: "Alex Johnson" },
+    { uri: "/profile/alexjohnson", children: "Alex Johnson" },
+    { uri: "/profile/alexjohnson", children: "Alex Johnson" },
+    { uri: "/profile/alexjohnson", children: "Alex Johnson" },
   ],
+  originalProjectUrl: "",
+  followers: 0,
+  createdTime: 0,
+  actions: [],
 };
 ---
 
@@ -51,6 +65,6 @@ const projectData = {
   hideLinks={[MenuName.ProjectName]}
   subtitle="Data Section: Project"
 >
-  <BackButton href="/maintainer/work" slot="left" />
+  <BackButton uri="/maintainer/work" slot="left" />
   <ProjectsSection slot="center" projects={[projectData, projectData]} />
 </V2Layout>
